// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a SpinnerHOC wrapped View with spinner using Snapshots 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View />
  <View
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {
          "backgroundColor": "rgba(0, 0, 0, 0.6)",
          "justifyContent": "center",
        },
      ]
    }
  >
    <ActivityIndicator
      animating={true}
      color="#999999"
      hidesWhenStopped={true}
      size="large"
    />
  </View>
</View>
`;

exports[`renders a SpinnerHOC wrapped View without spinner using Snapshots 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View />
</View>
`;
